simple change on endpoint for testing

--- a/Client/AppSettings.json
+++ b/Client/AppSettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  //"url": "https://api.dotnetsafer.com/api/services/shield",
-  "url": "http://api.dotnetsafer.test/api/",
+  "url": "https://api.dotnetsafer.com/api/services/shield",
+  // "url": "http://api.dotnetsafer.test/api/",
   "version": "1.1"
 }
